# EmbeddedLinuxDiploma

Concurrency/Labs/: async.cpp  conditional_variable.cpp  create_thread.cpp  deadlock_exposed.cpp  detach_example.cpp  draft.s  first_touch_thread.cpp  future_exception.cpp  future_promise.cpp  lock_guard.cpp  raii_mutex.cpp  singleton.cpp  thread_pass_ref.cpp  thread_with_containers.cpp  thread_yeild.cpp
Concurrency/Slides/: Introduction to Operating Systems.pptx  RTOS.pptx
Modern Cpp/labs/Pointers/: function_ptr.cpp
ModernCpp/labs/: overriding  overriding.cpp  shape  shape_l2.cpp  vehicle.cpp
ModernCpp/labs/Basics/: calculator_l1.h
ModernCpp/labs/Containers/: map_veg  map_veg.cpp
ModernCpp/labs/Design patterns/: adaptor  observer  proxy  simpleproxy
ModernCpp/labs/Pointers/: reference.cpp
ModernCpp/labs/SmartPointers/: counted  counted_app.cpp  counted_ptr.h  life  weak
ModernCpp/labs/Strategy/: strategy  strategy_algo.cpp  vector.cpp
ModernCpp/labs/classes/: complex.cpp
ModernCpp/labs/composition/: sound  sound.cpp  window  window.cpp
ModernCpp/labs/overloading/: complex  complex.cpp
ModernCpp/labs/struct/: struct  student  student.cpp
ModernCpp/labs/templates/: simple  swap  (+1 more)
Sockets/labs/: client.c  local_client.c  server.c
Sockets/labs/client/: CMakeLists.txt  local_client.cpp  socket_factory.cpp  socket_factory.h
Yocto/labs/: device_tree.dts
Yocto/slides/: Qemu with RPI tutorial.odt
labs/Basics/: calculator_l1.cpp  reference_l1.cpp
labs/Pointers/: ptr_l1.cpp
labs/arrays/: array_l1.cpp  stl_array.cpp
slides/: DesignPatterns.ppt
(+25 files in other folders)
